# docs/swagger.json
@@ -51,6 +51,14 @@
                 },
                 "type": "object"
             }
+        },
+        "securitySchemes": {
+            "bearer": {
+                "description": "JWT authorization header. Use Bearer \u003ctoken\u003e.",
+                "in": "header",
+                "name": "Authorization",
+                "type": "apiKey"
+            }
         }
     },
     "info": {
@@ -250,6 +258,11 @@
                         "description": "Internal Server Error"
                     }
                 },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ],
                 "summary": "Get file by ID",
                 "tags": [
                     "files"
